# requirement-knowledge-agent

./: .gitignore  README.md  pyproject.toml
docs/: TODO.md
docs/superpowers/plans/: 2026-07-06-requirement-knowledge-agent-mvp.md
docs/superpowers/specs/: 2026-07-06-requirement-knowledge-agent-design.md
docs/templates/: default-solutions-template.md  standards-template.md
samples/: expected_decisions.json  from_atomizer.jsonl  requirements.jsonl
samples/kb/: default_solutions.json  standards.json
src/requirement_knowledge_agent/: analyzer.py  cli.py  decision.py  evaluation.py  exporters.py  ingestion.py  io.py  matching.py  models.py  validation.py
tests/: test_analyzer.py  test_cli.py  test_decision.py  test_evaluation.py  test_exporters.py  test_ingestion.py  test_io.py  test_matching.py  test_package.py  test_validation.py
